Add JDK 17 support in the tests